--- a/PROG-PART2-FINAL/PROG-PART2-FINAL.csproj
+++ b/PROG-PART2-FINAL/PROG-PART2-FINAL.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RecipeClass.cs" />
+    <Compile Include="RecipeCode.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
